@@ -1,3 +1,7 @@
+[B]Version 2.6.9[/B]
+
+- Fix for Popular, Recent, and Featured video names after second page.
+
 [B]Version 2.6.8[/B]
 
 - Fix for shows and movies with an apostrophe in their name
